--- a/resume.html
+++ b/resume.html
@@ -50,7 +50,7 @@ Hobbies : Watching movies,Listing songs,love to communicate<br>
 languge known : C++, Java, Python</p><hr>
 <!-- <h2> REFERENCES </h2>
 <p>Tony, S chand, Mannan</p> -->
-<a href="fair1.html">Back to PORTFOLIO</a>
+<a href="index.html">Back to PORTFOLIO</a>
 
 </body>
 </html>
