--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ cellpadding="0" cellspacing="0" bgcolor="#c2c0c3">
                     </td>
 
                     <td width="13%" valign="top">
-                        <a href="https://mail.google.com/mail/u/0/#inbox" style="text-decoration:none">
+                        <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcSGLPnkndVwszHvrnJQMGnnnPjqCPrxGWBVhqWzBcmmtBRxxjskHvvqxBsjrwZpjCMCsKnnK">
                             Email Address
                         </a>
                     </td>
